Bug 1872408 - unescape refs before tracking r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D197467